--- a/trunk/test/Makefile.in
+++ b/trunk/test/Makefile.in
@@ -54,17 +54,18 @@ PUB_LIB=
 ## prefix or low-level driver with environment variables will influence 
 ## the temporary file name in ways that the makefile is not aware of.
 MOSTLYCLEAN=cmpd_dset.h5 compact_dataset.h5 dataset.h5 extend.h5 istore.h5   \
-            tfile[1-4].h5 th5s1.h5 lheap.h5 ohdr.h5 stab1.h5 \
+            tfile[1-4].h5 th5s1.h5 th5s2.h5 lheap.h5 ohdr.h5 stab1.h5 \
             stab2.h5 extern_[1-3].h5 extern_[1-4][ab].raw gheap[0-4].h5      \
             links.h5 links[1-3].h5 big.data big[0-9][0-9][0-9][0-9][0-9].h5  \
-            dtypes[1-3].h5 tattr.h5 tselect.h5 mtime.h5 unlink.h5            \
+            dtypes[1-4].h5 tattr.h5 tselect.h5 mtime.h5 unlink.h5            \
             fillval_[0-9].h5 fillval.raw mount_[0-9].h5 testmeta.h5 ttime.h5 \
             trefer[1-3].h5 tvltypes.h5 tvlstr.h5 tvlstr2.h5 flush.h5         \
             enum1.h5 titerate.h5 ttsafe.h5 tarray1.h5 tgenprop.h5            \
             tmisc[0-9]*.h5 set_extent_read.h5 set_extent_create.h5           \
             getname.h5 getname[1-3].h5 sec2_file.h5                          \
             family_file000[0-3][0-9].h5 multi_file-[rs].h5 core_file         \
-            new_move_[ab].h5 ntypes.h5 dangle.h5 error_test.h5 err_compat.h5
+            new_move_[ab].h5 ntypes.h5 dangle.h5 error_test.h5 err_compat.h5 \
+            dtransform.h5 test_filters.h5
 
 CLEAN=$(TIMINGS)
 
