--- a/trunk/tools/h5dump/testh5dump.sh.in
+++ b/trunk/tools/h5dump/testh5dump.sh.in
@@ -112,7 +112,7 @@ TOOLTEST tgroup-2.ddl --group=/g2 --group / -g /y tgroup.h5
 # test for displaying simple space datasets
 TOOLTEST tdset-1.ddl tdset.h5
 # test for displaying selected datasets
-TOOLTEST tdset-2.ddl -H -d dset1 -d /dset2 --dataset=dset3 tdset.h5
+TOOLTEST tdset-2.ddl -H -d dset1 -d /dset2 tdset.h5
 
 # test for displaying attributes
 TOOLTEST tattr-1.ddl tattr.h5
@@ -272,7 +272,8 @@ fi
 # user defined
 TOOLTEST tuserfilter.ddl -H  -d myfilter  tfilters.h5
     
-
+# test for displaying dataset and attribute of null space
+TOOLTEST tnullspace.ddl tnullspace.h5
 
 
 if test $nerrors -eq 0 ; then
