--- a/branches/hdf5_1_6/test/Makefile.in
+++ b/branches/hdf5_1_6/test/Makefile.in
@@ -47,12 +47,10 @@ PUB_LIB=
 ## prefix or low-level driver with environment variables will influence 
 ## the temporary file name in ways that the makefile is not aware of.
 MOSTLYCLEAN=cmpd_dset.h5 compact_dataset.h5 dataset.h5 extend.h5 istore.h5   \
-            tfile1.h5 tfile2.h5 tfile3.h5 th5s1.h5 lheap.h5 ohdr.h5 stab1.h5 \
-            stab2.h5 extern_1.h5 extern_2.h5 extern_3.h5 extern_1a.raw       \
-            extern_1b.raw extern_2a.raw extern_2b.raw extern_3a.raw          \
-            extern_3b.raw extern_4a.raw extern_4b.raw gheap0.h5 gheap1.h5    \
-            gheap2.h5 gheap3.h5 gheap4.h5 links.h5 links[1-3].h5 big.data    \
-            big[0-9][0-9][0-9][0-9][0-9].h5 dtypes[1-3].h5 tattr.h5          \
+            tfile[1-3].h5 th5s1.h5 lheap.h5 ohdr.h5 stab[1-2].h5 \
+            extern_[1-3].h5 extern_[1-4][ab].raw gheap[0-4].h5      \
+            links.h5 links[1-3].h5 big.data big[0-9][0-9][0-9][0-9][0-9].h5  \
+            dtypes[1-5].h5 tattr.h5          \
             tselect.h5 mtime.h5 unlink.h5 fillval_[0-9].h5 fillval.raw       \
             mount_[0-9].h5 testmeta.h5 ttime.h5 trefer[1-3].h5 tvltypes.h5   \
             tvlstr.h5 tvlstr2.h5 flush.h5 enum1.h5 titerate.h5 ttsafe.h5     \
@@ -99,6 +97,10 @@ timings _timings: $(TIMINGS)
 	   fi;								      \
 	done;
 
+## Programs have to be built before they can be tested!
+##
+check test _test: $(TEST_PROGS)
+
 ## How to build the tests...  They all depend on the test and hdf5 libraries.
 $(TEST_PROGS): $(LIB) $(LIBHDF5)
 
@@ -106,7 +108,7 @@ TESTHDF5_OBJ=testhdf5.lo tarray.lo tattr.lo tconfig.lo tfile.lo  \
     tgenprop.lo th5s.lo theap.lo titerate.lo tmeta.lo ttime.lo trefer.lo      \
     trefstr.lo tselect.lo ttbbt.lo ttst.lo tvltypes.lo tvlstr.lo tmisc.lo
 
-TTS_OBJ=ttsafe.lo ttsafe_dcreate.lo ttsafe_error.lo              \
+TTS_OBJ=ttsafe.lo ttsafe_dcreate.lo ttsafe_error.lo             \
     ttsafe_cancel.lo ttsafe_acreate.lo
 
 testhdf5: $(TESTHDF5_OBJ)
