--- a/trunk/test/Makefile.in
+++ b/trunk/test/Makefile.in
@@ -31,12 +31,8 @@ TEST_PROGS=testhdf5 lheap ohdr stab gheap hyperslab istore bittests dtypes      
            dsets cmpd_dset extend external links unlink big mtime fillval mount \
            flush1 flush2 enum gass_write gass_read gass_append set_extent       \
            srb_write srb_append srb_read ttsafe stream_test getname file_handle \
-           ntypes dangle dtransform
+           ntypes dangle error_test err_compat dtransform
 
-## Test programs for Error API
-ERR_PROGS=error_test err_compat
-
-PROGS=$(ERR_PROGS) $(TEST_PROGS)
 TIMINGS=testmeta
 
 ## The libh5test.a library provides common support code for the tests. We link
@@ -54,10 +50,10 @@ PUB_LIB=
 ## prefix or low-level driver with environment variables will influence 
 ## the temporary file name in ways that the makefile is not aware of.
 MOSTLYCLEAN=cmpd_dset.h5 compact_dataset.h5 dataset.h5 extend.h5 istore.h5   \
-            tfile[1-4].h5 th5s1.h5 th5s2.h5 lheap.h5 ohdr.h5 stab1.h5 \
-            stab2.h5 extern_[1-3].h5 extern_[1-4][ab].raw gheap[0-4].h5      \
+            tfile[1-4].h5 th5s[1-2].h5 lheap.h5 ohdr.h5 stab[1-2].h5 \
+            extern_[1-3].h5 extern_[1-4][ab].raw gheap[0-4].h5      \
             links.h5 links[1-3].h5 big.data big[0-9][0-9][0-9][0-9][0-9].h5  \
-            dtypes[1-4].h5 tattr.h5 tselect.h5 mtime.h5 unlink.h5            \
+            dtypes[1-5].h5 tattr.h5 tselect.h5 mtime.h5 unlink.h5            \
             fillval_[0-9].h5 fillval.raw mount_[0-9].h5 testmeta.h5 ttime.h5 \
             trefer[1-3].h5 tvltypes.h5 tvlstr.h5 tvlstr2.h5 flush.h5         \
             enum1.h5 titerate.h5 ttsafe.h5 tarray1.h5 tgenprop.h5            \
@@ -105,10 +101,10 @@ timings _timings: $(TIMINGS)
 
 ## Programs have to be built before they can be tested!
 ##
-check test _test: $(PROGS)
+check test _test: $(TEST_PROGS)
 
 ## How to build the tests...  They all depend on the test and hdf5 libraries.
-$(PROGS): $(LIB) $(LIBHDF5)
+$(TEST_PROGS): $(LIB) $(LIBHDF5)
 
 TESTHDF5_OBJ=testhdf5.lo tarray.lo tattr.lo tconfig.lo tfile.lo \
     tgenprop.lo th5s.lo theap.lo titerate.lo tmeta.lo ttime.lo trefer.lo     \
