--- a/trunk/test/Makefile.in
+++ b/trunk/test/Makefile.in
@@ -31,7 +31,14 @@ TEST_PROGS=testhdf5 lheap ohdr stab gheap hyperslab istore bittests dtypes      
            dsets cmpd_dset extend external links unlink big mtime fillval mount \
            flush1 flush2 enum gass_write gass_read gass_append set_extent       \
            srb_write srb_append srb_read ttsafe stream_test getname file_handle \
-           ntypes dangle error_test err_compat dtransform
+           ntypes dangle dtransform
+           
+## Test programs for Error API.  Only compile them but let testerror.sh run 
+## them to compare the output error messages with standard ones.  'make check'
+## doesn't run them directly.
+ERR_PROGS=error_test err_compat
+
+PROGS=$(ERR_PROGS) $(TEST_PROGS)
 
 TIMINGS=testmeta
 
@@ -101,10 +108,10 @@ timings _timings: $(TIMINGS)
 
 ## Programs have to be built before they can be tested!
 ##
-check test _test: $(TEST_PROGS)
+check test _test: $(PROGS)
 
 ## How to build the tests...  They all depend on the test and hdf5 libraries.
-$(TEST_PROGS): $(LIB) $(LIBHDF5)
+$(PROGS): $(LIB) $(LIBHDF5)
 
 TESTHDF5_OBJ=testhdf5.lo tarray.lo tattr.lo tconfig.lo tfile.lo \
     tgenprop.lo th5s.lo theap.lo titerate.lo tmeta.lo ttime.lo trefer.lo     \
