--- a/branches/hdf5_1_6/test/Makefile.in
+++ b/branches/hdf5_1_6/test/Makefile.in
@@ -28,7 +28,7 @@ TEST_PROGS=testhdf5 lheap ohdr stab gheap hyperslab istore bittests dtypes      
            dsets cmpd_dset extend external links unlink big mtime fillval mount \
            flush1 flush2 enum gass_write gass_read gass_append set_extent       \
            srb_write srb_append srb_read ttsafe stream_test getname file_handle \
-           ntypes dangle
+           ntypes dangle filename
 
 TIMINGS=testmeta
 
@@ -60,7 +60,8 @@ MOSTLYCLEAN=cmpd_dset.h5 compact_dataset.h5 dataset.h5 extend.h5 istore.h5   \
             tmisc13b.h5 tmisc14.h5 set_extent_read.h5 set_extent_create.h5   \
             getname.h5 getname1.h5 getname2.h5 getname3.h5 sec2_file.h5      \
             family_file000[0-3][0-9].h5 multi_file-[rs].h5 core_file         \
-            new_move_[ab].h5 ntypes.h5 dangle.h5 test_filters.h5
+            new_move_[ab].h5 ntypes.h5 dangle.h5 test_filters.h5 			 \
+			get_file_name.h5
 
 CLEAN=$(TIMINGS)
 
@@ -78,7 +79,7 @@ TEST_SRC=big.c bittests.c cmpd_dset.c dsets.c dtypes.c extend.c              \
          unlink.c enum.c ttsafe.c ttsafe_dcreate.c ttsafe_error.c            \
          ttsafe_cancel.c ttsafe_acreate.c gass_write.c gass_read.c           \
          gass_append.c srb_read.c srb_write.c srb_append.c stream_test.c     \
-         set_extent.c getname.c file_handle.c ntypes.c dangle.c
+         set_extent.c getname.c file_handle.c ntypes.c dangle.c filename.c
 
 TEST_OBJ=$(TEST_SRC:.c=.lo)
 
@@ -218,5 +219,8 @@ ntypes: ntypes.lo
 
 dangle: dangle.lo
 	@$(LT_LINK_EXE) $(CFLAGS) -o $@ dangle.lo $(LIB) $(LIBHDF5) $(LDFLAGS) $(LIBS)
+
+filename: filename.lo
+	@$(LT_LINK_EXE) $(CFLAGS) -o $@ filename.lo $(LIB) $(LIBHDF5) $(LDFLAGS) $(LIBS)
 
 @CONCLUDE@
